# rust-music-bot

./: .gitignore  Cargo.toml
migrations/2024-01-21-192109_init/: down.sql  up.sql
migrations/2024-01-23-150437_init/: up.sql
src/: main.rs  models.rs  schema.rs
src/api/: auth_service.rs  mod.rs  test.rs
src/api/controllers/: channel.rs  mod.rs  playlist.rs  seek.rs  state.rs
src/bot/: events.rs  mod.rs
src/bot/auto_complete/: mod.rs  move.rs  skip.rs
src/bot/commands/: bass.rs  disconnect.rs  join.rs  mod.rs  move.rs  password.rs  pause.rs  ping.rs  play.rs  repeat.rs  resume.rs  skip.rs  speed.rs  volume.rs
src/bot/utils/: gstreamr_input.rs  mod.rs  parser.rs  player.rs  playlist.rs  track.rs
