[package]
name = "rust-music-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }

actix-files = { version = "0.6.2" }
actix-web = { version = "4.4.1" }
actix-cors = { version = "0.7.0" }
actix-multipart = { version = "0.6.1" }

diesel = { version = "2.1.4", default-features = false, features = ["r2d2", "sqlite", "returning_clauses_for_sqlite_3_35", "chrono"] }
libsqlite3-sys = { version = "0.27.0", features = ["bundled"] }

serenity = { version = "0.12.0", features = ["cache", "framework", "standard_framework", "voice", "http", "rustls_backend", "chrono"] }
songbird = { version = "0.4", default-features = true, features = ["serenity", "receive", "driver", "gateway"] }
symphonia = { version = "0.5.3", features = ["all"] }
gstreamer = "*"
gstreamer-app = "*"

youtube_dl = { version = "*", features = ["tokio"] }

serde_json = {version="*"}
serde = {version="*", features=["derive"]}

env_logger = "*"
log = "*"
chrono = "*"
regex = "*"
strsim = "*"
